# axbycz_probabilistic_method

./: .gitignore  .gitignore.swp  CMakeLists.txt  README.md  eigen_test.cpp  gen_ABC.cpp  generateABC.cpp  getErrorAXBYCZ.cpp  initializeXYZ.cpp  mainCompareCov.cpp  mainCompareDisorder.cpp  mainRealData.cpp  main_NAO_data_analysis.m  meanCov.cpp  permFixABC.cpp  scrambleData.cpp  se3_vec.h  sensorNoise.cpp  skewExp.cpp  so3Vec.h  tranError.cpp
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/lib/pkgconfig/: tf_matrix_printer.pc
catkin_ws/devel/lib/tf_matrix_printer/: tf_matrix_printer_node
catkin_ws/devel/share/tf_matrix_printer/cmake/: tf_matrix_printerConfig.cmake
catkin_ws/src/tf_matrix_printer/: CMakeLists.txt  package.xml
catkin_ws/src/tf_matrix_printer/src/: tf_matrix_printer.cpp
data/: 000.txt  000_board.txt  000_m.txt  001.txt  001_board.txt  001_m.txt  002.txt  002_board.txt  002_m.txt  003.txt  003_board.txt  003_m.txt  004.txt  004_board.txt  004_m.txt  005.txt  005_board.txt  005_m.txt  006.txt  006_board.txt  006_m.txt  007.txt  007_board.txt  007_m.txt  008.txt  008_board.txt  008_m.txt  009.txt  009_board.txt  009_m.txt  010.txt  010_board.txt  010_m.txt  011.txt  011_board.txt  011_m.txt  A_abc.txt  CamToBoardPose.txt  CamToBoardTF_new.txt  RealSense_D435_handle.yaml  (+13 more)
data/20230418_abb_charuco_10x14/: c2b_tf.txt
data/20230426_ur5e_charuco_5x7/: abc.txt  c2b_tf.txt  r1_tf.txt  r2_tf.txt
data/20230428_i_abb_charuco_10x14/: abc.txt  c2b_tf.txt  r1_tf.txt  r2_tf.txt
data/221221_panda_ps_EH/: 0_markerpose.txt  0_robotpose.txt  10_markerpose.txt  10_robotpose.txt  11_markerpose.txt  11_robotpose.txt  12_markerpose.txt  12_robotpose.txt  13_markerpose.txt  13_robotpose.txt  14_markerpose.txt  14_robotpose.txt  15_markerpose.txt  15_robotpose.txt  16_markerpose.txt  16_robotpose.txt  17_markerpose.txt  17_robotpose.txt  18_markerpose.txt  18_robotpose.txt  19_markerpose.txt  19_robotpose.txt  1_markerpose.txt  1_robotpose.txt  20_markerpose.txt  20_robotpose.txt  21_markerpose.txt  21_robotpose.txt  22_markerpose.txt  22_robotpose.txt  23_markerpose.txt  23_robotpose.txt  24_markerpose.txt  24_robotpose.txt  25_markerpose.txt  25_robotpose.txt  26_markerpose.txt  26_robotpose.txt  27_markerpose.txt  27_robotpose.txt  (+50 more)
data/A_fixed/: c2b_tf.txt  r1_tf.txt  r2_tf.txt
data/C_fixed/: C_abc.txt  abc.txt  c2b_tf.txt  r1_tf.txt  r2_tf.txt
data/MatToTxt/: A_abc.mat  C_abc.mat  abc.mat  abc.txt  mat_to_txt.py  r1_tf1_new.mat  r1_tf1_new.txt  transform_ABC_unified_fixA.txt  transform_ABC_unified_fixC.txt  txt_to_mat.py
data/charuco_10x14/: r1_tf.txt  r2_tf.txt
results/: XYZ.txt  log_batchSolveX.txt  plots_data.txt  results.csv  results.txt
scripts/: loadMat.cpp  mainCompareCov.cpp  mainCompareDisorder.cpp  mainRealData.cpp  mainRealData1.cpp  mainRealData2.cpp  mainRealData3.cpp  mainRealData4.cpp  mainSimulation.cpp  mainSimulation2.cpp  plot_main.py  plot_main_1.py  readMatrices.cpp  temp.cpp  tf_echo_to_numbers.cpp
solvers/: axbyczProb1.cpp  axbyczProb1.h  axbyczProb1_old.h  axbyczProb1_v2.cpp  axbyczProb1_v3.cpp  axbyczProb1_v4.cpp  axbyczProb1_v5.cpp  axbyczProb1_v6.cpp  axbyczProb2.cpp  axbyczProb2.h  axbyczProb3.cpp  axbyczProb3.h  axbyczProb3_v2.cpp  axbyczProb3_v3.cpp  batchSolveX.cpp  batchSolveXY.cpp  batchSolveXY.h  batchSolveXY1.cpp  batchSolveXY2.cpp  batchSolveXY3.cpp  batchSolveXY4.cpp  batchsolve_test.cpp  meanCov_solvertest.cpp  temp.cpp  wangAXBYCZ.cpp
test/: eigen_test  expmTEST.cpp  expm_test.cpp  fKineTEST.cpp  getErrorAXBYCZTEST.cpp  initializeXYZTEST.cpp  isEqualfTEST.cpp  meanCovTEST.cpp  metricTEST.cpp  mvgTEST.cpp  permFixABCTEST.cpp  rotErrorTEST.cpp  scrambleDataTEST.cpp  se3VecTEST.cpp  sensorNoiseTEST.cpp  skewExpTEST.cpp  skewLogTEST.cpp  so3VecTEST.cpp  test_axbyczProb3_consistency.cpp  tranErrorTEST.cpp
util/: ChessBoardPointsImgToTF.cpp  boxplot.py  chessboardImgToTF.cpp  expm  expm.cpp  expm.h  fKine.cpp  fKine.h  generateABC.cpp  generateABC.h  generateABC1.cpp  generateSetsOfABC.cpp  generateSetsOfABC.h  generateSetsOfABC1.cpp  getErrorAXBYCZ.cpp  getErrorAXBYCZ.h  initializeXYZ.cpp  initializeXYZ.h  isEqual.cpp  isEqualf.cpp  isEqualf.h  loadArraysToMatrices.cpp  loadMatrices.cpp  loadMatrices.h  loadMatricesX.cpp  loadMatricesX.h  logT.cpp  logm.cpp  logm.h  meanCov.cpp  meanCov.h  meanCov1.cpp  meanCov2.cpp  meanCov3.cpp  metric.cpp  metric.h  mvg.cpp  mvg.h  paramExtract.cpp  paramExtract.h  (+28 more)
