<?xml version="1.0"?>
<package format="2">
  <name>tf_matrix_printer</name>
  <version>0.0.1</version>
  <description>A simple TF matrix printer</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
</package>

